MilestoneRFAFullSandBox/src/objects/Milestone1_Project__c.object
<CustomObject>
    <description>Force.com Labs - PM - A collaborative enterprise which has a planned goal. A project can have many milestones.</description>
    <fields>
        <fullName>AllView__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BI_Cross_Func__c</fullName>
        <label>BI</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BI_Project_Type__c</fullName>
        <label>BI Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Synergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCPP_Status__c</fullName>
        <label>CCPP Status</label>
        <picklist>
            <picklistValues>
                <fullName>Before DD1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between DD1&amp;2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between DD2&amp;3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between DD3&amp;4 ①</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between DD3&amp;4 ②</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between DD3&amp;4 ③</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After DD4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Big_Title_NO__c</fullName>
        <label>Category / BIG Title NO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Big_Title__c</fullName>
        <label>Category / BIG Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Date__c</fullName>
        <label>Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commercial_Cross_Func__c</fullName>
        <label>Commercial</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conductor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conductor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Conductor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <inlineHelpText>プロジェクトの完了期限</inlineHelpText>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>このプロジェクトの概要</inlineHelpText>
        <label>Project Objectives</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>Deadline__c - Kickoff__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>開始日と期限日の間の日数</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FInance_Cross_Func__c</fullName>
        <label>Finance</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SupplyChain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Integration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GoogleGanntUrl__c</fullName>
        <inlineHelpText>算出</inlineHelpText>
        <label>GoogleGanntUrl</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HR_Cross_Func__c</fullName>
        <label>HR</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IT_Cross_Func__c</fullName>
        <label>IT</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_or_with_ATK__c</fullName>
        <label>Individual or with ATK</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATK（Phase 1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATK（Phase 2)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kickoff__c</fullName>
        <inlineHelpText>プロジェクトの開始日</inlineHelpText>
        <label>Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Cross_Func__c</fullName>
        <label>Legal</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Missed_Deadline_explanation__c</fullName>
        <label>Missed Deadline explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Project_Milestone_Due_Date__c</fullName>
        <inlineHelpText>このプロジェクトのマイルストーンの次の期限日。サブマイルストーンを含む。</inlineHelpText>
        <label>Next Project Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Project_Top_Milestone_Due_Date__c</fullName>
        <inlineHelpText>次の未完了マイルストーンの期限日。子マイルストーンは含まない。</inlineHelpText>
        <label>Next Project Top Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Incomplete_Milestones__c</fullName>
        <inlineHelpText>このプロジェクトの未完了マイルストーン数。子マイルストーンを含む。</inlineHelpText>
        <label>Number of Incomplete Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Incomplete_Top_Milestones__c</fullName>
        <inlineHelpText>このプロジェクトの総未完了マイルストーン。子マイルストーンはカウントしない。</inlineHelpText>
        <label>Number of Incomplete Top Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opex_or_CAPEX__c</fullName>
        <label>Opex or CAPEX</label>
        <picklist>
            <picklistValues>
                <fullName>Opex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opex (CCBSC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPEX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PAC_Cross_Func__c</fullName>
        <label>PAC</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_to_address_delays__c</fullName>
        <label>Plan to address delays</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procurement_Cross_Func__c</fullName>
        <label>Procurement</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Classification__c</fullName>
        <inlineHelpText>この項目はチャーター申請する際に必要なCOA基準ですので、必ず選択願います</inlineHelpText>
        <label>Project Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Class A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectLeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_No__c</fullName>
        <label>Project No</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectSponsor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Status_View__c</fullName>
        <formula>IMAGE( 
CASE(Project_Status__c, 
&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;, 
&quot;Yellow&quot;, &quot;/img/samples/light_yellow.gif&quot;, 
&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;), &quot;status color&quot; 
)</formula>
        <label>Project Status*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Specific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_Activity_to_pass_Open_issue__c</fullName>
        <label>Activity To Pass / Open Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_Actual_Date__c</fullName>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RM_Addressable_Spend__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Addressable Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RM_Annual_Savings_Target__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Annual Savings Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RM_Annual_Savings_Target_lower__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Annual Savings Target(lower)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RM_Annual_Savings_Target_upper__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Annual Savings Target(upper)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RM_Approval_Status__c</fullName>
        <label>Approval Step</label>
        <picklist>
            <picklistValues>
                <fullName>Initiate Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charter Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close-Out Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_BI_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RM_BI_Select__c</fullName>
        <label>BI</label>
        <picklist>
            <picklistValues>
                <fullName>Business Integration</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RM_Background_Current_Issue__c</fullName>
        <label>(As-is) Background Current Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_Change__c</fullName>
        <label>Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_Commercial_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RM_Commercial_Select__c</fullName>
        <label>Commercial</label>
        <picklist>
            <picklistValues>
                <fullName>KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C7-Marketing &amp; Commercial Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C8-Commercial Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercialization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RM_Communication_Change__c</fullName>
        <label>Communication &amp; Change Management Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_Details_of_Solution__c</fullName>
        <label>Details of Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_Estimated_Benefit_Overview__c</fullName>
        <label>Estimated Benefit Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_Finance_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RM_Finance_Select__c</fullName>
        <label>Finance</label>
        <picklist>
            <picklistValues>
                <fullName>Business Planning and Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F1-Controller’s group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal control compliance/J-SOX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-KO Subsidiaries and M&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain Finance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RM_Financial_Validation__c</fullName>
        <label>Financial Validation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_HR_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RM_HR_Select__c</fullName>
        <label>HR</label>
        <picklist>
            <picklistValues>
                <fullName>BPCommercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compensation and Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H8-Shared Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H9-HRAdministration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Integration</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RM_IS_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RM_IS_Select__c</fullName>
        <label>IS</label>
        <picklist>
            <picklistValues>
                <fullName>02_Business Systems Management (BSM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03_Infrastructure Management (IM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04_Enterprise Data Management (EDM)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RM_Issues_For_Escalation_Recovery_plan__c</fullName>
        <label>Issues For Escalation/Recovery Plan</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_Keep__c</fullName>
        <label>Keep</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_Key_Events_For_Next_Week__c</fullName>
        <label>Key Events For Next Week</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_Key_Events_From_This_Week__c</fullName>
        <label>Key Events From This Week</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_L3_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L3 Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UsersL3Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RM_Leader_discussion__c</fullName>
        <label>Leader discussion</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_Legal_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RM_Legal_Select__c</fullName>
        <label>Legal</label>
        <picklist>
            <picklistValues>
                <fullName>Business Operation Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts Centre of Excellence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate  Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethics ＆ Compliance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RM_PAC_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RM_PAC_Select__c</fullName>
        <label>PAC</label>
        <picklist>
            <picklistValues>
                <fullName>2020 Tokyo Olympic Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship/PR Event Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainability Management</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RM_PaybackPeriodYears__c</fullName>
        <label>Payback Period (Years)</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_Plan_Date__c</fullName>
        <formula>Deadline__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RM_Procurement_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Procurement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RM_Procurement_Select__c</fullName>
        <label>Procurement</label>
        <picklist>
            <picklistValues>
                <fullName>Cold Drink Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRO&amp;DME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operation Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Driving</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RM_Project_No__c</fullName>
        <displayFormat>Project-{0000000000}</displayFormat>
        <label>Project No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>RM_Quantitative_Benefit_Spending__c</fullName>
        <inlineHelpText>添付ファイルがある場合、テキストに添付参照などを記載して下さい</inlineHelpText>
        <label>Quantitative Benefit Spending</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_RFA_Charter_Approved_Link__c</fullName>
        <label>RFACharter承認リンク</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RM_RFA_CloseOut_Approved_Link__c</fullName>
        <label>RFACloseOut承認リンク</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RM_RFA_Initiate_Approved_Link__c</fullName>
        <label>RFAInitiate承認リンク</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RM_RFA_SelectedList_Formal__c</fullName>
        <label>SelectedList_Formal</label>
        <picklist>
            <picklistValues>
                <fullName>a-01. General Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Capital Project Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Medium Project Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d. Small Project Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>h.04.Capital Budget Initial Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_RFA_SelectedList__c</fullName>
        <label>SelectedList</label>
        <picklist>
            <picklistValues>
                <fullName>h.01.Project Initiate Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>h.02.Project Charter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>h.03.Project Close-Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_Routine_Function__c</fullName>
        <label>Routine Function</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_SCM_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RM_SCM_Select__c</fullName>
        <label>SCM</label>
        <picklist>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment &amp; Occupational Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OE &amp; Package Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning &amp; SC Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC Strategy, Shared Service</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RM_Sponsor_discussion__c</fullName>
        <label>Sponsor discussion</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_Team_Member_discussion__c</fullName>
        <label>Team Member discussion</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_To_Be_Funded_By_L2_Functions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Be Funded By (L2 Functions):</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reduction_or_Avoidance__c</fullName>
        <label>ABP Incl. or Not incl.</label>
        <picklist>
            <picklistValues>
                <fullName>Including in ABP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not including in ABP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SCM_Cross_Func__c</fullName>
        <label>SCM</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_BudgetExpenseSummary__c</fullName>
        <formula>IF( Total_Expense_Budget__c &gt; 0,
IMAGE(
&quot;http://chart.apis.google.com/chart?chtt=Task+Expense+Budget+Analysis&amp;&quot; &amp;
&quot;chxr=0,0,&quot; &amp; Text(max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c)) &amp; &quot;&amp;&quot; &amp;
&quot;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322,666666&amp;&amp;&quot;&amp;
&quot;chdl=&quot;&amp;
&quot;Budget (&quot; &amp; TEXT(Total_Expense_Budget__c) &amp; &quot;)&quot;&amp;
&quot;|Planned (&quot; &amp; TEXT(Total_Expense_Budget_from_Milestones__c) &amp; &quot;)&quot;&amp;
&quot;|Estimated (&quot; &amp; TEXT(Total_Expense_Estimate__c) &amp; &quot;)&quot;&amp;
&quot;|Incurred (&quot; &amp; TEXT(Total_Expense_Incurred__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp;
TEXT( Total_Expense_Budget__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100 )&amp;&quot;|&quot;&amp; 
TEXT( Total_Expense_Budget_from_Milestones__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100)  &amp;&quot;|&quot; &amp; 
TEXT( Total_Expense_Estimate__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100 ) &amp;&quot;|&quot; &amp; 
TEXT(  Total_Expense_Incurred__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100) 
, &quot;Project Expense - Budget, Planned, Estimated, Incurred&quot;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Summary - Deprecated</label>
        <type>Text</type>
    </fields>
</CustomObject>